Fixed markup on the assesment tab

--- a/app/assets/javascripts/children/children.html
+++ b/app/assets/javascripts/children/children.html
@@ -10,7 +10,7 @@
         </div>
         <div class="widget-body no-padding large">
           <div class="list-group">
-            <a class="list-group-item" ng-repeat="c in childCtrl.children" ui-sref-active="active" ui-sref="children.view({id:c.id})" >
+            <a class="list-group-item" ng-repeat="c in childCtrl.children" ui-sref-active="active" ui-sref="children.view.assesment({id:c.id})" >
               <p class-"list-group-item-text">
                 <div class="col-md-12">
                   <div class="col-md-2">
