--- a/app/assets/javascripts/admin/standards/view_standard.html
+++ b/app/assets/javascripts/admin/standards/view_standard.html
@@ -74,4 +74,11 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <button class="btn btn-danger btn-large btn-block" ng-click="deleteStandard()"> Delete Standard </button>
+    </div>
+  </div>
+
 </div>
