--- a/app/assets/javascripts/children/children.html
+++ b/app/assets/javascripts/children/children.html
@@ -1,38 +1,24 @@
 <section ng-if="!state.current.data.hideChildren"> 
+
   <div class="row" ng-controller="ChildrenCtrl as childCtrl">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="widget">
-        <div class="widget-header">
-          <i class="fa fa-child"></i> Your Registered Children
-          <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="childCtrl.createChild()">
-            <i class="fa fa-plus"></i> Add Child
-          </button>
-        </div>
-        <div class="widget-body no-padding large">
-          <div class="list-group">
-            <a class="list-group-item" ng-repeat="c in childCtrl.children" ui-sref-active="active" ui-sref="children.view.assesment({id:c.id})" >
-              <p class-"list-group-item-text">
-                <div class="col-md-12">
-                  <div class="col-md-2">
-                    <div child-picture child="c" style="width:100px;height:100px;"></div>           
-                  </div>
-                  <div class="col-md-8">
-                    <h4> {{c.firstName}} {{c.lastName}} </h4>
-                  </div>
-                  <div class="col-md-2">
-                  </div>
-                </div>
-                <span class="clearfix"></span>
-              </p>
-            </a>
-          </div>
-        </div>
-        <div class="widget-footer">
-      
+    <div class="row">
+      <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="childCtrl.createChild()">
+        <i class="fa fa-plus"></i> Add Child
+      </button>
+    </div> 
+    <div class="col-sm-4 col-md-3" ng-repeat="c in childCtrl.children">
+      <div class="thumbnail">
+        <img child-picture child="c" style="width:100px;height:100px;"> 
+        <div class="caption">
+          <h3>{{::c.firstName}}</h3>
+          <p> Some blurb, maybe birthdate? and grade? </p>
+          <p><a ui-sref="children.view.assesment({id:c.id})" class="btn btn-info btn-sm" role="button"> <i class="fa fa-eye"></i> View </a> 
+          <a href="#" class="btn btn-default btn-danger btn-sm" role="button"><i class="fa fa-trash"></i>Delete</a></p>
         </div>
       </div>
     </div>
-  </div> 
+  </div>
+
 </section>
 <div ui-view class="row col-md-12"></div>
 <toaster> </toaster>
