--- a/app/assets/javascripts/admin/questions/add/add_question.html
+++ b/app/assets/javascripts/admin/questions/add/add_question.html
@@ -1,6 +1,6 @@
 <form novalidate role="form" name="form">
   <div class="modal-header">
-    <h3 class="modal-title">Add a Quesiton </h3>
+    <h3 class="modal-title">Add a Question </h3>
   </div>
   <div class="modal-body">
     <div class="form-group" data-ng-class="{'has-error': form.text.$invalid, 'has-success': !form.text.$invalid}" >
@@ -14,8 +14,17 @@
     </div>
    
     <div class="form-group" data-ng-class="{'has-error': form.picture.$invalid, 'has-success': !form.picture.$invalid}" >
-      <label for="picture"> Add a photo </label>
-      <input type="file" name="picture" id="picture" data-ng-model="picture" base-sixty-four-input accept="image/gif, image/jpeg, image/png, image/jpg">
+      <label for="picture"> Add a picture </label>
+            <input type="file" class="form-control" name="file"  ng-file-select ng-model="picture" ng-file-change="upload($files)" >
+      <progressbar ng-show="progressPercentage > 0" class="progress-striped active" max="100" value="progressPercentage" type="success"><i>{{progressPercentage}}%</i></progressbar>
+      
+      <!-- TODO: show the list of thumbnails already uploaded  --> 
+      <ul class="list-unstyled list-inline" ng-if="uploaded.length > 0" style="padding-top:.5em">
+        <li ng-repeat="uploadFile in uploaded">
+          <img width="80px" height="80px" src="data:{{uploadFile.contentType}};base64,{{uploadFile.content}}" /> 
+          <div> {{uploadFile.filename}} </div>
+        </li> 
+      </ul> 
     </div>
     
     <div class="form-group" data-ng-class="">
