--- a/web/activities/activities.html
+++ b/web/activities/activities.html
@@ -1,28 +1,14 @@
 <tabset>
   <data-tab heading="My Activities" select="activities.setCurrentActivities('my')">
-    <section class="row"> 
-      <div class="col-lg-12">
-        <div class="col-lg-6 col-md-6 col-xs-12">
-          <div class="widget">
-            <div class="widget-body">
-              <div class="widget-content pull-left"> 
-                <div class="title"> Add a new Activity </div>
-                <div class="comment"> 
-                  <div class="form-group" >
-                    <select name="standard" ng-model="activities.standardSelected" class="form-control" ng-options="standard.title for standard in activities.availableStandards" >
-                      <option value=""> -- Choose a Standard -- </option>
-                    </select>
-                    <span id="helpBlock" class="help-block small"><i class="fa fa-question-circle"></i><a href="#"> Help! I don't see my standard! </a> </span>
-                  </div>
-                  <button class="btn btn-primary" ng-click="activities.begin()" ng-class="{'disabled': activities.standardSelected == null}"> Continue </button> 
-                </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-          </div>
-        </div>
+    <section class="row">
+      <div class="col-md-12">
+        <button class="btn btn-xs btn-success" ng-click="activities.begin()"> <i class="fa fa-plus"></i> Add New </button>
+        <button ng-if="activities.isMyTab()" class="btn btn-xs btn-danger" ng-click="activities.deleteSelectedActivities()" ng-disabled="activities.selectedActivities.length ==0">
+            <i class="fa fa-trash"></i> Delete
+        </button>
       </div>
-    </section> 
+    </section>
+
     <activity-widget></activity-widget> 
   </data-tab>
 
