--- a/web/activities/add/add_activity.html
+++ b/web/activities/add/add_activity.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
   <!-- <h3 class="modal-title">Add Homework</h3> -->
   <br />
-  <ul class="steps-indicator steps-3">
+  <ul class="steps-indicator steps-4">
       <li data-ng-class="{default: !step.completed && !step.selected, 
                      current: step.selected && !step.completed, 
                      done: step.completed && !step.selected, 
@@ -13,8 +13,21 @@
     <br />
 </div>
 <div class="modal-body">
-  
+     
   <div class="row" data-ng-show="add.steps[0].selected == true">
+  <div class="col-lg-12">
+    <div class="comment"> 
+      <div class="form-group" >
+        <select name="standard" ng-model="add.standard" class="form-control" ng-options="standard.title for standard in add.availableStandards" >
+          <option value=""> -- Choose a Standard -- </option>
+        </select>
+        <span id="helpBlock" class="help-block small"><i class="fa fa-question-circle"></i><a href="#"> Help! I don't see my standard! </a> </span>
+      </div>
+    </div>
+  </div>
+  </div>
+  
+  <div class="row" data-ng-show="add.steps[1].selected == true">
     <div class="col-lg-12">
       <div class="widget">
         <div class="widget-header">
@@ -22,8 +35,13 @@
           <input type="text" placeholder="Search" data-ng-model="searchText" class="form-control input-sm pull-right" />
           <div class="clearfix"> </div>
         </div>
-        <div class="widget-body small no-padding">
-          <div class="table-responsive">
+        <div ng-if="add.loadingStatements" class="widget-body">
+          <div class="loading">
+            <i class="fa fa-circle-o-notch fa-spin"></i> 
+          </div>
+        </div>
+        <div class="widget-body small no-padding" ng-if="!add.loadingStatements">
+          <div class="table-responsive" >
             <table class="table table-striped table-condensed table-hover">
               <thead>
                 <tr>
@@ -45,7 +63,7 @@
     </div>
   </div>
 
-  <div class="row" data-ng-show="add.steps[1].selected == true">
+  <div class="row" data-ng-show="add.steps[2].selected == true">
     <form name="activityForm"  class="form-horizontal" data-ng-init="add.setForm(this)" >
       <input type="hidden" ng-model="add.entity.statementId" value="{{add.statement.id}}" />
       <div class="form-group">
@@ -98,7 +116,7 @@
     </form>    
   </div>
  
-  <div class="row" data-ng-show="add.steps[2].selected == true">
+  <div class="row" data-ng-show="add.steps[3].selected == true">
   
     <div class="col-md-12 col-lg-12 col-sm-12">
       <div class="alert alert-info" role="alert">
