--- a/web/questions/questions.html
+++ b/web/questions/questions.html
@@ -1,6 +1,7 @@
 <!-- <section ng-if="!state.current.data.hideQuestions"> -->
-<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!state.current.data.hideQuestions" ng-init="init()">   
-   <div class="row top">
+<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!app.state.current.data.hideQuestions" ng-init="init()">   
+  <pre> {{app.state.current.data.hideQuestions}} </pre>
+  <div class="row top">
     <div class="col-lg-12">
       <div class="widget">
         <div class="widget-header">
@@ -34,5 +35,5 @@
     </div>
   </div>
 </section>
-<div ui-view  ng-if="state.current.data.hideQuestions"> </div>
+<div ui-view  ng-if="app.state.current.data.hideQuestions"> </div>
 <toaster> </toaster>
