--- a/web/admin/admin.html
+++ b/web/admin/admin.html
@@ -2,6 +2,7 @@
   <ul>
     <li> <a data-ui-sref="admin.standards" > Manage Standards </a> </li>
     <li> <a data-ui-sref="admin.questions" > Manage Questions </a> </li>
+    <li> <a data-ui-sref="admin.resources" > Manage Resources </a> </li>
     <li> <a data-ui-sref="admin.activities"> Manage Activities </a> </li>
   </ul>
 </section>
