--- a/web/questions/questions.html
+++ b/web/questions/questions.html
@@ -1,39 +1,16 @@
-<!-- <section ng-if="!state.current.data.hideQuestions"> -->
-<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!app.state.current.data.hideQuestions" ng-init="init()">   
-  <pre> {{app.state.current.data.hideQuestions}} </pre>
-  <div class="row top">
-    <div class="col-lg-12">
-      <div class="widget">
-        <div class="widget-header">
-          <i class="fa fa-question"></i> Questions
-          <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="addQuestion()"> 
-            Add a Question 
-          </button>
-          <input type="text" placeholder="Search" class="form-control input-sm pull-right" data-ng-model="searchText"/>
-          <div class="clearfix"> </div>
-        </div>
-        
-        <div class="widget-body no-padding large">
-          <question-details> </question-details> 
-        </div>
-        
-        <div class="widget-footer">
-          <nav style="text-align:center">
-            <ul class="pagination">
-              <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
-            </ul>
-          </nav>
-        <div>
-
-      </div>
-    </div>
+<section class="row">
+  <div class="col-md-12">
+  <button class="btn btn-xs btn-success" ng-click="ctrl.addQuestion()"> 
+    <i class="fa fa-plus"></i>Add a Question 
+  </button> 
   </div>
 </section>
+
+<section class="row" >   
+  <div class="col-lg-12">
+    <question-details question-list="ctrl.questions"> </question-details> 
+  </div>
+</section>
+
 <div ui-view  ng-if="app.state.current.data.hideQuestions"> </div>
 <toaster> </toaster>
