--- a/web/questions/questions.html
+++ b/web/questions/questions.html
@@ -1,14 +1,20 @@
 <section class="row">
   <div class="col-md-12">
-  <button class="btn btn-xs btn-success" ng-click="ctrl.addQuestion()"> 
-    <i class="fa fa-plus"></i>Add a Question 
-  </button> 
+
+    <button class="btn btn-xs btn-success" ng-click="ctrl.addQuestion()"> 
+      <i class="fa fa-plus"></i>Add a Question 
+    </button> 
+
+    <button class="btn btn-xs btn-danger" ng-click="ctrl.deleteQuestion()" ng-disabled="ctrl.selectedQuestions.length < 1">
+      <i class="fa fa-trash"></i>Delete
+    </button>
+
   </div>
 </section>
 
 <section class="row" >   
   <div class="col-lg-12">
-    <question-details question-list="ctrl.questions"> </question-details> 
+    <question-details question-list="ctrl.questions" selectable="multiple" selectlist="ctrl.selectedQuestions" > </question-details> 
   </div>
 </section>
 
