--- a/web/activities/activities.html
+++ b/web/activities/activities.html
@@ -12,6 +12,10 @@
     <activity-widget></activity-widget> 
   </data-tab>
 
+  <data-tab heading="Activity Sets" select="activities.setCurrentActivities('sets')">
+    <activity-sets-widget> </activity-sets-widget>   
+  </data-tab>
+
   <data-tab heading="All Activities" select="activities.setCurrentActivities('all')">
     <activity-widget></activity-widget> 
   </data-tab>
